--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Expensify CI-CD
+name: React App Deploy to Surge
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
     branches: [master]
-#   pull_request:
-#     branches: [ master ]
+  pull_request:
+    branches: [master]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,21 +22,20 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Install Node.JS
+      - name: Install NodeJS
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
 
       - uses: borales/actions-yarn@v2.0.0
         with:
-          cmd: install #will run `yarn install`
+          cmd: install # will run `yarn install` command
 
-      - name: React app Building
-        run: yarn run build
+      - name: Build React App
+        run: npm run build
 
-      - name: Installing Surge
+      - name: Install Surge
         run: npm install --global surge
 
-      - name: Deploying to surge #CI
-        run: ./build react-expense-tracker-by-aisha-khan.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      - name: Deploy to Surge
+        run: surge ./build react-expense-tracker-by-aisha-khan.surge.sh --token ${{ secrets.SURGE_TOKEN }}
