--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           cmd: install # will run `yarn install` command
 
       - name: Build React App
-        run: npm run build
+        run: yarn build
 
       - name: Install Surge
         run: npm install --global surge
